<resources>
    <string name="app_name">E toll</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="action_profile_String">Profile</string>
    <string name="action_vehicle_String">new vehicle</string>
    <string name="action_refresh_String">Refresh</string>
    <string name="action_report_String">Report</string>
    <string name="action_logout_String">Logout</string>

    <string name="menu_Profile_String">Profile</string>
    <string name="menu_History_string">History</string>
    <string name="menu_vehicle_String">new vehicle</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_Settings_String">Change Mode</string>
    <string name="menu_recharge">Recharge</string>
    <string name="menu_share">Share</string>
    <string name="menu_Contact_Us_String">Contact Us</string>
    <string name="textLabelFont">monospace</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_parking">Parking</string>
    <string name="action_settings">Change Mode</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_send">Send</string>
</resources>
