<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_profile"
        android:orderInCategory="1"
        android:title="@string/action_profile_String"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_vehicle"
        android:orderInCategory="3"
        android:title="@string/action_vehicle_String"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_Refresh"
        android:orderInCategory="3"
        android:title="@string/action_refresh_String"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_report"
        android:orderInCategory="2"
        android:title="@string/action_report_String"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="3"
        android:title="@string/action_logout_String"
        app:showAsAction="never" />
</menu>
