<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_Profile"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_Profile_String" />
        <item
            android:id="@+id/nav_History"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_History_string" />
        <item
            android:id="@+id/nav_refresh"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="Refresh Profile" />

        <item
            android:id="@+id/nav_Settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_Settings_String" />
    </group>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_contactUs"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_Contact_Us_String" />
        </menu>
    </item>

</menu>
